# tcf-backup

./: .gitignore  LICENSE  Makefile  Makefile.portable  Makefile.standart  README.md  TcfBackup.sln  aarch-compile-interop-assembly-release.sh  cmake.targets  publish.sh
CMake/: Toolchain-aarch64.cmake
Compression/: CMakeLists.txt
Compressor/: CMakeLists.txt
Compressor/src/: buffer.hpp  compressor.cpp  compressor.hpp  compressor_type.hpp  logging.hpp  utils.hpp
Compressor/src/compressors/: bzip2_compressor.hpp  gzip_compressor.hpp  xz_compressor.hpp  zlib_compatible_compressor.hpp
SQLite/: CMakeLists.txt
SQLite/SQLite.Interop/: SQLite.Interop.2017.vcxproj
SQLite/SQLite.Interop/src/generic/: interop.h
SQLite/Setup/: aarch-compile-interop-assembly-debug.sh  aarch-compile-interop-assembly-release.sh  compile-interop-assembly-debug.sh  compile-interop-assembly-release.sh  x64-compile-interop-assembly-debug.sh  x64-compile-interop-assembly-release.sh
SQLite/System.Data.SQLite/: AssemblyInfo.cs  SQLite3.cs  SQLiteConnection.cs  SQLiteConnectionStringBuilder.cs  SQLiteException.cs  SQLiteFunction.cs  SQLitePatchLevel.cs  System.Data.SQLite.NetStandard21.csproj  System.Data.SQLite.csproj  UnsafeNativeMethods.cs
SQLite/System.Data.SQLite/Targets/: System.Data.SQLite.Properties.targets
SQLite/Targets/: SQLite.NET.Settings.targets
TcfBackup.Action/: ActionContextExecutor.cs  CompressAction.cs  DecompressAction.cs  DecryptAction.cs  EncryptAction.cs  FilterAction.cs  IAction.cs  IActionContext.cs  RenameAction.cs  TcfBackup.Action.csproj
TcfBackup.AppEnvironment/: AppEnviroment.cs  TcfBackup.AppEnvironment.csproj
TcfBackup.Archiver/: IArchiver.cs  IFilesArchiver.cs  IStreamingArchiver.cs  LogLevelExtension.cs  TarArchiver.cs  TcfBackup.Archiver.csproj
TcfBackup.BackupRepository/: Backup.cs  BackupFile.cs  BackupRepository.cs  IBackupRepository.cs  TcfBackup.BackupRepository.csproj
TcfBackup.BtrfsUtil/: BtrfsUtil.cs  BtrfsUtilNative.cs  TcfBackup.BtrfsUtil.csproj
TcfBackup.CommandLine.Options/: BackupOptions.cs  GenericOptions.cs  GoogleAuthOptions.cs  RestoreOptions.cs  RetentionOptions.cs  TcfBackup.CommandLine.Options.csproj
TcfBackup.Compressor/: BlockCompressorStream.cs  CompressStatus.cs  Compressor.cs  CompressorException.cs  CompressorNative.cs  CompressorStreamFactory.cs  CompressorType.cs  FifoFactory.cs  IBlockCompressor.cs  ICompressorStreamFactory.cs  TcfBackup.Compressor.csproj
TcfBackup.Configuration/: ConfigurationProvider.cs  DependsOnAttribute.cs  IConfigurationProvider.cs  TcfBackup.Configuration.csproj  VariantAttribute.cs
TcfBackup.Database/: Backup.cs  BackupDb.cs  BackupFile.cs  ConnectionStringSettings.cs  LinqToDbSettings.cs  TcfBackup.Database.csproj
(+303 files in other folders)
